fix get started button overflow

--- a/src/pages/Button/Button_top.css
+++ b/src/pages/Button/Button_top.css
@@ -5,7 +5,7 @@
     flex-direction: column;
     width: 100%;
     max-width: 179px;
-    height: 57px;
+    height: 60px;
     border-radius: 4px;
     overflow: hidden;
     transition: 0.6s cubic-bezier(.16,1,.3,1);
@@ -70,9 +70,8 @@
     .hidethis{
         display: none;
     }
-    .hover-button{
-        transform: none;
+    .hover-button {
         transition: none;
+        transform: none;
     }
-    
 }
