--- a/src/pages/Let_start.css
+++ b/src/pages/Let_start.css
@@ -12,7 +12,7 @@
 .letStart_redDot {
     width: 8px;
     height: 8px;
-    background-color: red;
+    background-color: var(--darkBlue);
     border-radius: 50%; 
     margin-right: 8px; 
 }
